# fluent-tail

./: Cargo.toml  Dockerfile  Makefile  README.md  azure-pipelines.yml  install.sh
.github/workflows/: push.yaml  regression.yaml  release.yaml
src/: args.rs  main.rs
