[package]
name        = "fluent-tail"
version     = "0.1.0"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2018"
license     = "MIT/Apache-2.0"
description = ""
repository  = "https://github.com/watawuwu/fluent-tail"
keywords    = [""]
categories  = ["command-line-utilities"]

[[bin]]
name = "fluent_tail"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/fluent-tail", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/fluent-tail", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
failure           = "0.1"
log               = "0.4"
pretty_env_logger = "0.3"
structopt         = "0.2"
exitcode          = "1.1"
atty              = "0.2"

# regex             = "1.2"
# lazy_static       = "1.3"
# serde             = { version = "1.0", features = ["derive"] }
# serde_json        = "1.0"
# chrono            = { version = "0.4", features = ["serde"] }
# regex             = "1"
# mktemp            = "0.3"

[features]
default = []

[dev-dependencies]
tempdir    = "0.3"
assert_cmd = "0.11"
predicates = "1.0"
